--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="form-horizontal">
     <div class="form-group">
-    <%= f.label :driver_id , :class => "col-sm-3 control-label" %>
-    <div class="col-sm-5"><%= f.number_field :driver_id, :class => "form-control" %></div>
-    </div>
-    <div class="form-group">
     <%= f.label :title , :class => "col-sm-3 control-label" %>
     <div class="col-sm-5"><%= f.text_field :title, :class => "form-control" %></div>
+    </div>
+    <div class="form-group">
+    <%= f.label :description , :class => "col-sm-3 control-label" %>
+    <div class="col-sm-5"><%= f.text_field :description, :class => "form-control" %></div>
     </div>
       <div class="form-group">
         <div class ="col-sm-3 control-label"><strong>Document:</strong></div>
