--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -10,8 +10,10 @@
       </ul>
     </div>
   <% end %>
-
   <div class="form-horizontal">
+    <div class="form-group">
+    <div class="col-sm-5"><%= f.hidden_field :driver_id, :class => "form-control" %></div>
+    </div>
     <div class="form-group">
     <%= f.label :title , :class => "col-sm-3 control-label" %>
     <div class="col-sm-5"><%= f.text_field :title, :class => "form-control" %></div>
