--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -16,6 +16,11 @@
 		            <span class="glyphicon glyphicon-pencil"></span> Edit
 		        <% end %>
 			</div>
+			<div class="btn" class="col-md-2 col-sm-2">
+		        <%= button_to(attach_doc_path(@driver), :class => "btn btn-default", role: "button", title: "Attach Document", method: :get) do %>            
+		            <span class="glyphicon glyphicon-paperclip"></span> Attach Doc
+		        <% end %>
+			</div>
     	</span>
     </h1>
     
