--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -1,104 +1,10 @@
-<% provide(:title, 'Drivers') %>
-<% provide(:heading, 'Driver Dashboard') %>
-    
-    <p><div class="row">
-    <div class="col-md-10 col-sm-10">
-        <div class="form" role="search">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search...">
-                    <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">
-                            <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>
-            </div><!--input-group -->
-        </div>
-    </div>
-    <div class="col-md-2 col-sm-2">
-            <%= button_to(new_driver_path, :class => "btn btn-default", :method => :get) do %>            
-                <span class="glyphicon glyphicon-plus"></span> Add Driver
-            <% end %>
-    </div>
-    </div></p>
+<% @column_titles = [ 
+    {:sort => "last_name", :title=>"Name"},
+    {:sort => "company_name", :title => "Company"},
+    {:sort => "permit_expiration_date", :title => "Permit Expiration Date"},
+    {:sort => "permit_number", :title => "Permit #"} ] %>
+            
 
-    <div class="table-responsive">
-    <table class="table table-striped table-hover">
-      <thead>
-        <tr>
-          <th>
-          	<%= sortable "last_name", "Name (Last, First Middle)" %>
-          	<% if sort_column == "last_name" %>
-          		<% if sort_direction == "asc" %>
-          			<span class="glyphicon glyphicon-arrow-up"></span>
-          		<% else %>
-          			<span class="glyphicon glyphicon-arrow-down"></span>
-          		<% end %>
-          	<% end %>
-          </th>
-		  <th>
-		  	<%= sortable "company_name", "Company Name" %>
-		  	<% if sort_column == "company_name" %>
-          		<% if sort_direction == "asc" %>
-          			<span class="glyphicon glyphicon-arrow-up"></span>
-          		<% else %>
-          			<span class="glyphicon glyphicon-arrow-down"></span>
-          		<% end %>
-          	<% end %>
-		  </th>
-		  <th>
-		  	<%= sortable "permit_expiration_date", "Permit Expiration Date" %>
-		  	<% if sort_column == "permit_expiration_date" %>
-          		<% if sort_direction == "asc" %>
-          			<span class="glyphicon glyphicon-arrow-up"></span>
-          		<% else %>
-          			<span class="glyphicon glyphicon-arrow-down"></span>
-          		<% end %>
-          	<% end %>
-		  </th>
-		  <th>
-		  	<%= sortable "permit_number", "Permit #" %>
-		  	<% if sort_column == "permit_number" %>
-          		<% if sort_direction == "asc" %>
-          			<span class="glyphicon glyphicon-arrow-up"></span>
-          		<% else %>
-          			<span class="glyphicon glyphicon-arrow-down"></span>
-          		<% end %>
-          	<% end %>
-		  </th>
-		  <th></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @drivers.each do |driver| %>
-          <tr>
-            <td><%= driver.last_name %>, <%= driver.first_name %> <%= driver.middle_name %></td>
-            <td><%= driver.company_name %></td>
-            <td><%= driver.permit_expiration_date %></td>
-            <td><%= driver.permit_number %></td>
-            <td><div class="btn-group">
-                    <div class="btn-group">
-                        <%= button_to(show_driver_path(driver), :class => "btn btn-mini", title: "View", method: :get) do %>
-                          <span class="glyphicon glyphicon-eye-open"></span>
-                        <% end %>
-                    </div>
-                    <div class="btn-group">
-                        <%= button_to(edit_driver_path(driver), :class => "btn btn-mini", title: "Edit", method: :get) do %>
-                          <span class="glyphicon glyphicon-pencil"></span>
-                        <% end %>
-                    </div>
-                    <div class="btn-group">
-                        <%= button_to(show_driver_path(driver), :class => "btn btn-mini", title: "Destroy", method: :delete, 
-                            data: { confirm: 'Are you sure you want to delete this driver?' } ) do %>
-                          <span class="glyphicon glyphicon-trash"></span>
-                        <% end %>
-                    </div>
-                </div>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-    </div>
-    <br>
-
+<%= render partial: "layouts/index", locals: {type: "Driver", items: @drivers, titles: @column_titles} %>
+ 
+<!-- To specify how each cell is populated, modify layouts/index/_row.html.erb -->
