--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -1,17 +1,8 @@
 <% provide(:title, "New Driver") %>
 
-<h1 class="page-header">New driver
-
-<div class="btn" class="col-md-2 col-sm-2">
-    <%= button_to(drivers_path, :class => "btn btn-default", role: "button", title: "Back", method: :get) do %>
-        <span class="glyphicon glyphicon-arrow-left"></span> Back
-    <% end %>
-</div>
-
-</h1>
+<%= content_for :heading do %>
+    <%= render 'layouts/cancel_button' %>
+    New Driver
+<% end %>
 
 <%= render 'drivers/form' %>
-
-<!--
-<%= link_to 'Back', drivers_path %>
--->
