--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -1,171 +1,154 @@
 <% provide(:title, 'Drivers') %>
 
-<div class="col-sm-11 col-md-11 main">
-    <h1 class="page-header">
-    	<%= @driver.first_name %> <%= @driver.middle_name %> <%= @driver.last_name %>
-    	
-    	<span class="btn-group">
-			<div class="btn" class="col-md-2 col-sm-2">
-		        <%= button_to(drivers_path, :class => "btn btn-default", role: "button", title: "Back", method: :get) do %>            
-		            <span class="glyphicon glyphicon-arrow-left"></span> Back
-		        <% end %>
-			</div>
-			
-			<div class="btn" class="col-md-2 col-sm-2">
-		        <%= button_to(edit_driver_path(@driver), :class => "btn btn-default", role: "button", title: "Edit", method: :get) do %>            
-		            <span class="glyphicon glyphicon-pencil"></span> Edit
-		        <% end %>
-			</div>
-    	</span>
-    </h1>
-    
-	<div class="row">
-	  <div class="col-sm-6 col-md-4">
-		<div class="thumbnail">
-            <%= image_tag @driver.avatar.url %>
-		</div>
-	  </div>
+<%= content_for :heading do %>
+    <%= render 'layouts/back_button' %>
+    <%= link_to(edit_driver_path(@driver), :class => "btn btn-lg btn-link pull-right", title: "Edit", method: :get) do %>            
+        <span class="glyphicon glyphicon-pencil"></span> Edit
+    <% end %>
+    <%= @driver.first_name %> <%= @driver.middle_name %> <%= @driver.last_name %>
+<% end %>
+
+
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+	<div class="thumbnail">
+        <%= image_tag @driver.avatar.url %>
 	</div>
+  </div>
+</div>
+
+<table cellspacing=20 cellpadding="20%">
+	<tbody>
+		<!--<tr>
+  			<th>First name:</th>	
+  			<td><var><%= @driver.first_name %></var></td>
+  		</tr>
 		
+		<tr>
+			<th>Middle name:</th>
+			<td><var><%= @driver.middle_name %></var></td>
+		</tr>
 
-<!--<p id="notice"><%= notice %></tr>
-	<%= link_to 'Edit', edit_driver_path(@driver) %> |
-	<%= link_to 'Back', drivers_path %>-->
-	
-		<table cellspacing=20 cellpadding="20%">
-			<tbody>
-				<!--<tr>
-		  			<th>First name:</th>	
-		  			<td><var><%= @driver.first_name %></var></td>
-		  		</tr>
-				
-				<tr>
-	  				<th>Middle name:</th>
-	  				<td><var><%= @driver.middle_name %></var></td>
-				</tr>
-		
-				<tr>
-				  	<th>Last name:</th>
-				  	<td><var><%= @driver.last_name %></var></td>
-				</tr> -->
+		<tr>
+		  	<th>Last name:</th>
+		  	<td><var><%= @driver.last_name %></var></td>
+		</tr> -->
 
-				<tr>
-				  	<th>Date of Birth:</th>
-				  	<td><var><%= @driver.dob %></var></td>
-				</tr>
+		<tr>
+		  	<th>Date of Birth:</th>
+		  	<td><var><%= @driver.dob %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Type:</th>
-				  	<td><var><%= @driver.type_id %></var></td>
-				</tr>
+		<tr>
+		  	<th>Type:</th>
+		  	<td><var><%= @driver.type_id %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Address:</th>
-				  	<td><var><%= @driver.address %></var></td>
-				</tr>
+		<tr>
+		  	<th>Address:</th>
+		  	<td><var><%= @driver.address %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>City:</th>
-				  	<td><var><%= @driver.city %></var></td>
-				</tr>
+		<tr>
+		  	<th>City:</th>
+		  	<td><var><%= @driver.city %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>State:</th>
-				  	<td><var><%= @driver.state %></var></td>
-				</tr>
+		<tr>
+		  	<th>State:</th>
+		  	<td><var><%= @driver.state %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Zipcode:</th>
-				  	<td><var><%= @driver.zipcode %></var></td>
-				</tr>
+		<tr>
+		  	<th>Zipcode:</th>
+		  	<td><var><%= @driver.zipcode %></var></td>
+		</tr>
 
-				<tr>
-					<th>Race:</th>
-					<td><var><%= @driver.race %></var></td>
-				</tr>
+		<tr>
+			<th>Race:</th>
+			<td><var><%= @driver.race %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Sex:</th>
-				  	<td><var><%= @driver.sex %></var></td>
-				</tr>
+		<tr>
+		  	<th>Sex:</th>
+		  	<td><var><%= @driver.sex %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Height:</th>
-				  	<td><var><%= @driver.height %></var></td>
-				</tr>
+		<tr>
+		  	<th>Height:</th>
+		  	<td><var><%= @driver.height %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Weight:</th>
-				  	<td><var><%= @driver.weight %></var></td>
-				</tr>
+		<tr>
+		  	<th>Weight:</th>
+		  	<td><var><%= @driver.weight %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>License:</th>
-				  	<td><var><%= @driver.license %></var></td>
-				</tr>
+		<tr>
+		  	<th>License:</th>
+		  	<td><var><%= @driver.license %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Phone number:</th>
-				  	<td><var>(<%= @driver.phone_number[0, 3] %>) <%= @driver.phone_number[3, 3] %>-<%= @driver.phone_number[6, 10] %> </var></td>
-				</tr>
+		<tr>
+		  	<th>Phone number:</th>
+		  	<td><var>(<%= @driver.phone_number[0, 3] %>) <%= @driver.phone_number[3, 3] %>-<%= @driver.phone_number[6, 10] %> </var></td>
+		</tr>
 
-				<tr>
-				  	<th>Training completion date: &nbsp </th>
-				  	<td><var><%= @driver.training_completion_date %></var></td>
-				</tr>
+		<tr>
+		  	<th>Training completion date: &nbsp </th>
+		  	<td><var><%= @driver.training_completion_date %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Permit expiration date:</th>
-				  	<td><var><%= @driver.permit_expiration_date %></var></td>
-				</tr>
+		<tr>
+		  	<th>Permit expiration date:</th>
+		  	<td><var><%= @driver.permit_expiration_date %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Permit number:</th>
-				  	<td><var><%= @driver.permit_number %></var></td>
-				</tr>
+		<tr>
+		  	<th>Permit number:</th>
+		  	<td><var><%= @driver.permit_number %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Status:</th>
-				  	<td><var><%= @driver.status %></var></td>
-				</tr>
+		<tr>
+		  	<th>Status:</th>
+		  	<td><var><%= @driver.status %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Owner:</th>
-				  	<td><var><%= @driver.owner %></var></td>
-				</tr>
+		<tr>
+		  	<th>Owner:</th>
+		  	<td><var><%= @driver.owner %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Company name:</th>
-				  	<td><var><%= @driver.company_name %></var></td>
-				</tr>
+		<tr>
+		  	<th>Company name:</th>
+		  	<td><var><%= @driver.company_name %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Physical expiration date:</th>
-				  	<td><var><%= @driver.physical_expiration_date %></var></td>
-				</tr>
+		<tr>
+		  	<th>Physical expiration date:</th>
+		  	<td><var><%= @driver.physical_expiration_date %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Valid:</th>
-				  	<td><var><%= @driver.valid %></var></td>
-				</tr>
+		<tr>
+		  	<th>Valid:</th>
+		  	<td><var><%= @driver.valid %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Beacon Id:</th>
-				  	<td><var><%= @driver.beacon_id %></var></td>
-				</tr>
+		<tr>
+		  	<th>Beacon Id:</th>
+		  	<td><var><%= @driver.beacon_id %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Average rating:</th>
-				  	<td><var><%= @driver.average_rating %></var></td>
-				</tr>
+		<tr>
+		  	<th>Average rating:</th>
+		  	<td><var><%= @driver.average_rating %></var></td>
+		</tr>
 
-				<tr>
-				  	<th>Total ratings:</th>
-				  	<td><var><%= @driver.total_ratings %></var></td>
-				</tr>
+		<tr>
+		  	<th>Total ratings:</th>
+		  	<td><var><%= @driver.total_ratings %></var></td>
+		</tr>
 
-			</tbody>
-		</table>
-
-</div>	
+	</tbody>
+</table>
 
