--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,8 +12,8 @@
 
     <div class="navbar-collapse collapse"> 
       <ul class="nav navbar-nav">
-        <li><%= link_to "Home", drivers_path %></li>
-        <li><%= link_to "About", '#' %></li>
+        <li><%= link_to "Home", overview_path %></li>
+        <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Help", '#' %></li>
       </ul> 
       <ul class="nav navbar-nav navbar-right">
