Adjusted the doc show to fit the new layouts

--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,3 +1,12 @@
+<% provide(:title, 'Documents') %>
+<%= content_for :heading do %>
+    <%= render 'layouts/back_button' %>
+    <%= link_to(edit_document_path(@document), :class => "btn btn-lg btn-link pull-right", title: "Edit", method: :get) do %>            
+        <span class="glyphicon glyphicon-pencil"></span> Edit
+    <% end %>
+    <%= @document.title %> 
+<% end %>
+ 
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -6,17 +15,10 @@
 </p>
 
 <p>
-  <strong>Title:</strong>
-  <%= @document.title %>
-</p>
-
-<p>
   <strong>Description:</strong>
   <%= @document.description %>
 </p>
 
-<%= send_file(@document.doc.url, :type =>
-'application/pdf', :disposition => 'inline') %>
-
-<%= link_to 'Edit', edit_document_path(@document) %> |
-<%= link_to 'Back', documents_path %>
+<%= button_to(view_document_path(@document), :class => "btn btn-lg btn-link btn-block", title: "View", method: :get) do %>            
+    <span class="glyphicon glyphicon-eye"></span> View Document
+<% end %>
