Fixing issues. Added alternate sidebar to _sidebar.html.erb, scaling issues with tables should be fixed...

--- a/app/views/drivers/edit.html.erb
+++ b/app/views/drivers/edit.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Editing Driver") %>
 
 <%= content_for :heading do %>
-    <%= render 'layouts/cancel_button' %>
+    <%= render 'layouts/buttons/cancel_button' %>
     Editing Driver
 <% end %>
 
