--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" id="logo" href=""><%= render 'layouts/logo' %></a>
+      <a class="navbar-brand" id="logo" href=""><%= render 'layouts/brand/logo' %></a>
     </div> <!--navbar-header-->
 
     <div class="navbar-collapse collapse"> 
