--- a/app/views/layouts/index/_add_button.html.erb
+++ b/app/views/layouts/index/_add_button.html.erb
@@ -1,4 +1,4 @@
 <%= button_to({:controller => controller.controller_path, :action => 'new'}, 
-                :title => "Add #{name}", :class => 'btn btn-default', :method => :get) do %>            
+                :title => "Add #{name}", :class => 'btn btn-default btn-block', :method => :get) do %>            
     <span class="glyphicon glyphicon-plus"></span> Add <%= name %>
 <% end %>
