--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "New Driver") %>
 
 <%= content_for :heading do %>
-    <%= render 'layouts/cancel_button' %>
+    <%= render 'layouts/buttons/cancel_button' %>
     New Driver
 <% end %>
 
