--- a/app/views/layouts/_general.html.erb
+++ b/app/views/layouts/_general.html.erb
@@ -1,13 +1,13 @@
 <%= render 'layouts/header' %>
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm-2 col-md-2 col-md-offset-1 col-sm-offset-0 sidebar">
-            <%= render 'layouts/sidebar' %>
-        </div>    
-        <div class="col-sm-10 col-md-10 col-md-offset-2 col-sm-offset-2 main">
-            <h1 class="page-header"><%= yield(:heading) %></h1>
-            <%= yield %>            
-        </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-2 col-sm-2 col-md-offset-1 col-sm-offset-0 sidebar">
+        <%= render 'layouts/sidebar' %>
     </div>
+    <div class="col-md-8 col-sm-10 col-md-offset-3 col-sm-offset-2 main">
+      <h1 class="page-header"><%= yield(:heading) %></h1>
+      <%= yield %>            
+    </div>
+  </div>
 </div>
