--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,16 +1,23 @@
 
 <div id="navbar_sidebar" class="container-fluid">
-      <ul class="nav nav-sidebar">
-        <% if current_user.try(:admin?) %>
-            <li class= <%= controller.controller_path == 'users' ? 'active' : '' %> ><%= link_to "Users", users_path %></li>
-        <% end %>
-        <li class= <%= controller.controller_path == 'drivers' ? 'active' : '' %> ><%= link_to "Drivers", drivers_path %></li>
-        <li class= <%= controller.controller_path == 'ratings' ? 'active' : '' %> ><%= link_to "Ratings", ratings_path %></li>    
-        <li class= <%= controller.controller_path == 'riders' ? 'active' : '' %> ><%= link_to "Riders", riders_path %></li>    
-        <li class= <%= controller.controller_path == 'companies' ? 'active' : '' %> ><%= link_to "Companies", companies_path %></li>    
-        <li class= <%= controller.controller_path == 'documents' ? 'active' : '' %> ><%= link_to "Documents", documents_path %></li>    
-        <% if current_user.try(:admin?) %>
-            <li><%= link_to "Import/Export", import_export_path %></li>
-        <% end %>
-      </ul>
+  <% if controller.controller_path == '#' %>
+    <ul class="nav">
+      <li><%= link_to "link1", '#' %></li>
+      <li><%= link_to "link2", '#' %></li>
+      <li><%= link_to "link3", '#' %></li>
+  <% else %>
+    <ul class="nav nav-sidebar">
+      <% if current_user.try(:admin?) %>
+        <li class= <%= controller.controller_path == 'users' ? 'active' : '' %> ><%= link_to "Users", users_path %></li>
+      <% end %>
+      <li class= <%= controller.controller_path == 'drivers' ? 'active' : '' %> ><%= link_to "Drivers", drivers_path %></li>
+      <li class= <%= controller.controller_path == 'ratings' ? 'active' : '' %> ><%= link_to "Ratings", ratings_path %></li>    
+      <li class= <%= controller.controller_path == 'riders' ? 'active' : '' %> ><%= link_to "Riders", riders_path %></li>    
+      <li class= <%= controller.controller_path == 'companies' ? 'active' : '' %> ><%= link_to "Companies", companies_path %></li>    
+      <li class= <%= controller.controller_path == 'documents' ? 'active' : '' %> ><%= link_to "Documents", documents_path %></li>    
+      <% if current_user.try(:admin?) %>
+        <li><%= link_to "Import/Export", import_export_path %></li>
+      <% end %>
+    </ul>  
+  <% end %>
 </div>
