--- a/app/views/layouts/_users.html.erb
+++ b/app/views/layouts/_users.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-8 col-xs-offset-2">
-  <%= render 'layouts/logo_inverse' %>
+  <%= render 'layouts/brand/logo_inverse' %>
   <div class="user-form well well-lg">
       <h2 class="user-form-heading"><%= yield(:heading) %></h2>
       <%= yield %>
