--- a/app/views/layouts/index/_row_buttons.html.erb
+++ b/app/views/layouts/index/_row_buttons.html.erb
@@ -7,13 +7,13 @@
     </div>
     <div class="btn-group">
     <%= button_to({controller: controller.controller_path, id: item, action: 'edit'}, 
-        method: :get, title: "Edit", role: "button", class: "btn btn-xs btn-link") do %>
+        method: :get, title: "Edit", role: "button", class: "btn btn-xs btn-nav") do %>
         <span class="glyphicon glyphicon-pencil"></span>
     <% end %>
     </div>
     <div class="btn-group">
     <%= button_to({controller: controller.controller_path, id: item, action: 'show'}, 
-        method: :delete, title: "Destroy", class: "btn btn-xs btn-link", role: "button",
+        method: :delete, title: "Destroy", class: "btn btn-xs btn-nav", role: "button",
         data: { confirm: 'Are you sure you want to delete?' }) do %>
         <span class="glyphicon glyphicon-trash"></span> 
     <% end %> 
