--- a/app/views/layouts/index/_tbody.html.erb
+++ b/app/views/layouts/index/_tbody.html.erb
@@ -5,7 +5,7 @@
             <td class="table-link" onclick="<%= link %>">
                 <%= row.last_name << ", " << row.first_name << " " << row.middle_name %></td>
             <td class="table-link" onclick="<%= link %>">
-                <%= row.company.name %></td>
+                <%= row.company_id %></td>
             <td class="table-link" onclick="<%= link %>">
                 <%= row.permit_expiration_date %></td>
             <td class="table-link" onclick="<%= link %>">
@@ -15,7 +15,7 @@
             <td></td>
         <% elsif controller.controller_path == 'ratings' %>
             <td><%= row.driver.last_name << ", " << row.driver.first_name %></td>
-            <td><%= row.driver.company.name %></td>
+            <td><%= row.driver.company_id %></td>
             <td><%= row.rating %></td>
             <td><%= row.comments %></td>
             <td><%= row.timestamp %></td>
