--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@driver) do |f| %>
+<%= form_for(@driver, :html => {:multipart => true }) do |f| %>
   <% if @driver.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@driver.errors.count, "error") %> prohibited this driver from being saved:</h2>
@@ -11,174 +11,117 @@
     </div>
   <% end %>
 
-  <table>
-  		<tr>
-			<td>
-			  <div class="field">
-				<%= f.label :first_name %><br>
-				<%= f.text_field :first_name, :size => 10 %>
-			  </div>
-			</td>
-			<td> &nbsp <td>
-			<td>			
-			  <div class="field">
-				<%= f.label :middle_name %><br>
-				<%= f.text_field :middle_name, :size => 10 %>
-			  </div>
-			</td>
-			<td> &nbsp <td>
-  			<td>
-			  <div class="field">
-				<%= f.label :last_name %><br>
-				<%= f.text_field :last_name, :size => 15 %>
-			  </div>
-			</td>
-  		</tr>
-  </table>
-  
-  <div class="field">
-    <%= f.label :dob %><br>
-    <%= f.date_select :dob, :start_year => 1950%>
-  </div>
-  <div class="field">
-    <%= f.label :type_id %><br>
-    <%= f.radio_button :type_id, "Taxi", :checked => "checked"%><strong>Taxi</strong><br>
-    <%= f.radio_button :type_id, "Wrecker"%><strong>Wrecker</strong>
-  </div>
-  <div class="field">
-    <%= f.label :address %><br>
-    <%= f.text_field :address %>
-  </div>
-  <table>
-  	<tr>
-  		<td>
-		  <div class="field">
-			<%= f.label :city %><br>
-			<%= f.text_field :city, :size => 15 %>
-		  </div>
-		</td>
-		<td> &nbsp <td>
-		<td>
-		  <div class="field">
-			<%= f.label :state %><br>
-			<%= f.select(:state, [ "TN", "AK", "AL", "AR", "AZ", "CA", "CO", "CT", "DC", "DE", "FL", "GA", "HI", "IA", "ID", "IL", "IN", "KS", "KY", "LA", "MA", "MD", "ME", "MI", "MN", "MO", "MS", "MY", "NC", "ND", "NE", "NH", "NJ", "NM", "NV", "NY", "OH", "OK", "OR", "PA", "RI", "SC", "SD", "TX", "UT", "VA", "VT", "WA", "WI", "WV", "WY"]) %>
-		  </div>
-		</td>
-		<td> &nbsp <td>
-		<td>
-		  <div class="field">
-			<%= f.label :zipcode %><br>
-			<%= f.number_field :zipcode, :size => 4%>
-		  </div>
-		</td>
-	</tr>
-  </table>
-  <div class="field">
-    <%= f.label :race %><br>
-	<%= f.select(:race, [ "African American",  "Asian", "Caucasian", "Hispanic", "Indian", "Native American", "Other"], {include_blank: true}) %>
-  </div>
-  <div class="field">
-    <%= f.label :sex %><br>
-    <%= f.radio_button :sex, "male" %> <strong>Male</strong><br>
-    <%= f.radio_button :sex, "female" %> <strong>Female</strong>
-  </div>
-  <table>
-  	<tr>
-  		<td>
-		  <div class="field">
-			<%= f.label :height %><br>
-			<%= f.number_field :height, :size => 4 %>
-		  </div>
-  		</td>
-  		<td> &nbsp <td>
-  		<td>
-		  <div class="field">
-			<%= f.label :weight %><br>
-			<%= f.number_field :weight, :size => 4 %>
-		  </div>
-  		</td>
-  	</tr>
-  </table>
-  <div class="field">
-    <%= f.label :license %><br>
-    <%= f.text_field :license %>
-  </div>
-  <div class="field">
-    <%= f.label :phone_number %><br>
-    <%= f.telephone_field :phone_number, :size => 10 %>
-  </div>
-  <div class="field">
-    <%= f.label :training_completion_date %><br>
-    <%= f.date_select :training_completion_date %>
-  </div>
-  <table>
-  	<tr>
-  		<td>
-  		  <div class="field">
-			<%= f.label :permit_number %><br>
-			<%= f.number_field :permit_number %>
-		  </div>
-  		</td>
-  		<td> &nbsp <td>
-  		<td>
-		  <div class="field">
-			<%= f.label :permit_expiration_date %><br>
-			<%= f.date_select :permit_expiration_date %>
-		  </div>
-  		</td>
-  	</tr>
-  </table>
-  <div class="field">
-    <%= f.label :status %><br>
-    <%= f.text_field :status %>
-  </div>
-  <table>
-  	<tr>
-  		<td>
-		  <div class="field">
-			<%= f.label :owner %><br>
-			<%= f.text_field :owner %>
-		  </div>
-  		</td>
-  		<td> &nbsp <td>
-  		<td>
-		  <div class="field">
-			<%= f.label :company_name %><br>
-			<%= f.text_field :company_name %>
-		  </div>
-  		</td>
-  	</tr>
-  </table>
-  <table>
-  	<tr>
-  		<td>
-		  <div class="field">
-			<%= f.label :physical_expiration_date %><br>
-			<%= f.date_select :physical_expiration_date %>
-		  </div>
-  		</td>
-  		<td> &nbsp &nbsp &nbsp &nbsp <td>
-  		<td>
-		  <div class="field">
-			<%= f.label :valid %><br>
-			<%= f.check_box :valid %>
-		  </div>
-  		</td>
-  	</tr>
-  </table>
-  <div class="field">
-    <%= f.label :beacon_id %><br>
-    <%= f.text_field :beacon_id %>
-  </div>
-<!--  <div class="field">
-    <%= f.label :average_rating %><br>
-    <%= f.text_field :average_rating %>
-  </div>
-  <div class="field">
-    <%= f.label :total_ratings %><br>
-    <%= f.number_field :total_ratings %>
-  </div> -->
-  <div class="actions">
-    <%= f.submit %>
+
+    <div class="form-horizontal">
+      <div class="form-group">
+        <%= f.label :first_name, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.text_field :first_name, :class => "form-control" %></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :middle_name, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.text_field :middle_name, :class => "form-control" %></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :last_name, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.text_field :last_name, :class => "form-control" %></div>
+      </div>
+      <div class="form-group">
+        <div class ="col-sm-3 control-label"><strong>Image:</strong></div>
+        <div class="col-sm-5"><%= f.file_field :avatar %></div>
+      </div>
+      <div class="form-group">
+        <div class ="col-sm-3 control-label"><strong>Date of Birth:</strong></div>
+        <div class="col-sm-5"><%= f.date_select :date_of_birth, :start_year => 1950%></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :type_id, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5">
+          <%= f.radio_button :type_id, "Taxi", :class=>"radio-inline", :checked => "checked"%> <strong>Taxi</strong><br>
+          <%= f.radio_button :type_id, "Wrecker", :class=>"radio-inline"%> <strong>Wrecker</strong>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :address, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.text_field :address, :class => "form-control" %></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :city, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.text_field :city, :class => "form-control" %></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :state, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.select(:state, [ "TN", "AK", "AL", "AR", "AZ", "CA", "CO", "CT", "DC", "DE", "FL", "GA", "HI", "IA", "ID", "IL", "IN", "KS", "KY", "LA", "MA", "MD", "ME", "MI", "MN", "MO", "MS", "MY", "NC", "ND", "NE", "NH", "NJ", "NM", "NV", "NY", "OH", "OK", "OR", "PA", "RI", "SC", "SD", "TX", "UT", "VA", "VT", "WA", "WI", "WV", "WY"])%>
+</div>
+      </div>
+      <div class="form-group">
+        <%= f.label :zipcode, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.number_field :zipcode, :class=>"form-control", :size => 4%></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :race, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.select(:race, [ "African American", "Asian", "Caucasian", "Hispanic", "Indian", "Native American", "Other"], {include_blank: true}) %></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :sex, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5">
+          <%= f.radio_button :sex, "male", :class=>"radio-inline", :checked => "checked"%> <strong>Male</strong><br>
+          <%= f.radio_button :sex, "female", :class=>"radio-inline"%> <strong>Female</strong>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :height, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.number_field :height, :class=>"form-control", :size => 4%></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :weight, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.number_field :weight, :class=>"form-control", :size => 4%></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :license, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.text_field :license, :class=>"form-control" %></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :phone_number, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.telephone_field :phone_number, :class=>"form-control", :size => 10 %></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :training_completion_date, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.date_select :training_completion_date %></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :permit_number, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.number_field :permit_number, :class => "form-control" %></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :permit_expiration_date, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.date_select :permit_expiration_date %></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :status, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.text_field :status, :class=>"form-control" %></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :vehicle_owner, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.text_field :vehicle_owner, :class=>"form-control" %></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :company_name, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.select(:company_id, Company.select('name').all.map(&:name), {include_blank: true}) %></div>
+      </div>
+      <div class="form-group">
+        <%= f.label :physical_expiration_date, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.date_select :physical_expiration_date %>
+          <%= f.check_box :valid, :class=>"checkbox-inline" %> <%= f.label :valid %> 
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :beacon_id, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.text_field :beacon_id, :class=>"form-control" %></div>
+      </div>
+
+<div class="form-group">
+    <div class="col-sm-offset-3 col-sm-7">
+        <%= f.submit "Submit", :class=>"btn btn-primary" %>
+    </div>
   </div>
 <% end %>
