--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -11,15 +11,18 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="form-horizontal">
+    <div class="form-group">
+      <%= f.label :name, :class => "col-sm-3 control-label" %>
+      <div class="col-sm-5"><%= f.text_field :name, :class => "form-control" %></div>
+    </div>
+    <div class="form-group">
+      <%= f.label :logo, :class => "col-sm-3 control-label" %>
+      <div class="col-sm-5"><%= f.file_field :logo%></div>
+    </div>
+
+  <div class="col-sm-offset-3 col-sm-7">
+      <%= f.submit "Submit", :class=>"btn btn-primary" %>
   </div>
-  <div class="form-group">
-    <div class ="col-sm-3 control-label"><strong>Logo:</strong></div>
-    <div class="col-sm-5"><%= f.file_field :logo %></div>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
   </div>
 <% end %>
