--- a/app/views/riders/edit.html.erb
+++ b/app/views/riders/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing rider</h1>
+<% provide(:title, 'Edit Rider') %>
+<%= content_for :heading do %>
+    <%= render 'layouts/buttons/back_button' %>
+    <%= link_to(show_rider_path(@rider), :class => "btn btn-lg btn-link pull-right", title: "Show", method: :get) do %>            
+        <span class="glyphicon glyphicon-eye-open"></span> Show
+    <% end %>
+    <%= "Rider: " << @rider.uuid %> 
+<% end %>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @rider %> |
-<%= link_to 'Back', riders_path %>
