Added diagram to manual

--- a/app/views/manual/overview.html.erb
+++ b/app/views/manual/overview.html.erb
@@ -2,12 +2,15 @@
 
 <%= content_for :heading do %>
     <%= render 'layouts/buttons/back_button' %>
-    Help Manual
+    <em><strong>TAXIDASH</strong></em> Manual
 <% end %>
 
-Hello and welcome to the manual for <em><strong>TAXIDASH</strong></em>! <em><strong>TAXIDASH</strong></em> is a online tool for maintaining taxi driver permits and provides quality assurance support through a driver rating system on the smartphone.
+<p>Hello and welcome to the manual for <em><strong>TAXIDASH</strong></em>! <em><strong>TAXIDASH</strong></em> is a online tool for maintaining taxi driver permits and provides quality assurance support through a driver rating system on the smartphone.
 
 Learning how to use this tool? Click on any of the icons on the left to get details about each object type in <em><strong>TAXIDASH</strong></em>. For troubleshooting, please check out the <em>Common Issues</em> in the left pane.
+</p>
+
+<%= image_tag 'TaxiDash.png', size:"1200x500" %>
 
 <h3>Summary of Object types in <em><strong>TAXIDASH</strong></em>:</h3>
 <h4>Companies</h4>
