--- a/app/views/layouts/_index.html.erb
+++ b/app/views/layouts/_index.html.erb
@@ -1,8 +1,7 @@
 <% provide(:title, "#{type}s") %>
 <% provide(:heading, "#{type} Dashboard") %>
 
-<div class="container-fluid">
-    <div class="row">
+  <p>  <div class="row">
           <div class="col-md-9 col-sm-9 col-xs-9 pull-left">
             <%= render partial: 'layouts/index/search' %>
           </div>
@@ -10,11 +9,10 @@
             <%= render partial: 'layouts/index/add_button', locals: {name: type} %>
           </div>
     </div>
-    <p>
+    </p>
     <div class="row">
       <table class="table table-striped table-hover col-md-12 col-sm-12 col-xs-12">
         <thead><%= render partial: 'layouts/index/thead', locals: {titles: @column_titles} %></thead>
         <tbody><%= render partial: 'layouts/index/tbody', locals: {items: items} %></tbody>
       </table>
     </div>
-</div>
