--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,25 +1,19 @@
 <% provide(:title, 'Users') %>
 <% provide(:heading, 'User Dashboard') %>
 
-    <p><div class="row">
-    <div class="col-md-10 col-sm-10">
-        <form class="form" role="search">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search...">
-                    <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">
-                            <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>
-            </div><!--input-group -->
-        </form>
-    </div>
-    <div class="col-md-2 col-sm-2">
-            <%= button_to(new_user_path, :class => "btn btn-default", role: "button", title: "New User", method: :get) do %>            
-                <span class="glyphicon glyphicon-plus"></span> Add User
-            <% end %>
-    </div>
-    </div></p>
+<p>
+<div class="row">
+      <div class="col-md-9 col-sm-9 col-xs-9 pull-left">
+        <%= render partial: 'layouts/index/search' %>
+      </div>
+      <div class="col-md-3 col-sm-3 col-xs-3">
+        <%= render partial: 'layouts/index/add_button', locals: {name: "User"} %>
+      </div>
+</div>
+   </p>
+   
+   
+   
     <!--          <h2 class="sub-header">Section title</h2> -->
     <div class="table-responsive">
     <table class="table table-striped table-hover">
@@ -41,28 +35,8 @@
               
               <td><%= user.username %> <%= user.admin ? "(ADMIN)" : ""%></td>
               <td><%= user.last_sign_in_at.nil? ? "N/A" : user.last_sign_in_at.in_time_zone("America/Chicago") %></td>
-              <td><%= link_to '', edit_other_user_path(user.id) %>    
-                  <div class="btn-group">
-                      <div class="btn-group">
-                          <%= button_to(show_user_path(user), :class => "btn btn-mini", title: "View", method: :get) do %>
-                            <span class="glyphicon glyphicon-eye-open"></span>
-                          <% end %>
-                      </div>
-                      <div class="btn-group">
-                          <%= button_to(edit_other_user_path(user.id) , :class => "btn btn-mini", title: "Edit", method: :get) do %>
-                            <span class="glyphicon glyphicon-pencil"></span>
-                          <% end %>
-                      </div>
-                      <div class="btn-group">
-                            <% if user.id != @current_user.id %>
-                                <%= button_to(show_user_path(user), :class => "btn btn-mini", method: :delete, 
-                                    data: { confirm: 'Are you sure you want to delete this user?' } ) do %>
-                                    <span class="glyphicon glyphicon-trash"></span>
-                                <% end %>
-                            <% end %>
-                      </div>
-                    </div>
-          </td>
+              <td><%= link_to '', edit_other_user_path(user.id) %>
+              <%= render partial: 'layouts/index/row_buttons', locals: {item: user} %></td>
           </tr>
       <% end %>
           </tbody>
