Tabs don't work exactly, but ratings and docs do show for each driver page

--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -10,3 +10,8 @@
 <%= render 'drivers/tabs' %>
 <%= render partial: 'drivers/show/bio', locals: {driver: @driver} %>
 
+<br>
+<div class="container-fluid">
+<p><%= render partial: 'drivers/show/ratings', locals: {driver: @driver} %></p>
+<p><%= render partial: 'drivers/show/documents', locals: {driver: @driver} %></p>
+</div>
