--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "Home", overview_path %></li>
         <li><%= link_to "About", about_path %></li>
-        <li><%= link_to "Help", manual_path %></li>
+        <li><%= link_to "Help", '' %></li>
       </ul> 
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
